--- a/cifrasCollection/src/main/resources/templates/listacifras.html
+++ b/cifrasCollection/src/main/resources/templates/listacifras.html
@@ -26,9 +26,25 @@
 
 			</table>
 		</div>
-	
+		
+		
+		<form action="salvar" method="post">
+			<div class="form-group">
+				<label for="nome">Nome da música</label> 
+				<input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" />
+			</div>
+			<div class="form-group">
+				<label for="tom">Tom da música</label>
+				<input type="text" class="form-control" id="tom" name="tom" placeholder="Tom" />
+			</div>
+			<div class="form-group">
+				<label for="cantor">Compositor/Cantor da música</label> 
+				<input type="text" class="form-control" id="cantor" name="cantor" placeholder="Cantor/Compositor" />
+			</div>
+			<button type="submit" class="btn btn-success">Salvar</button>
+		</form>
 	</div>
-
+	
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
