Inserindo layout novo e tela de login

--- a/cifrasCollection/src/main/resources/templates/index.html
+++ b/cifrasCollection/src/main/resources/templates/index.html
@@ -25,8 +25,7 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" id="branding">
-						<img src="principal/dummy/logo.png" alt="Site Title"></img>
-						<small class="site-description">O seu repositório de cifras</small>
+						<img src="principal/dummy/logo.png" alt="Site Title" height="100" width="300"></img>
 					</a> <!-- #branding -->
 					
 					<nav class="main-navigation">
@@ -47,64 +46,48 @@
 				</div>
 			</header> <!-- .site-header -->
 			
-			<div class="hero">
-				<div class="slider">
-					<ul class="slides">
-						<li class="lazy-bg" data-background="principal/dummy/slide-1.jpg">
-							<div class="container">
-								<h2 class="slide-title">Cifras Collection</h2>
-								<h3 class="slide-subtitle">O seu repositório de cifras online</h3>
-								<p class="slide-desc">Armazene suas cifras e acesse de qualquer lugar de forma rápida e fácil...</p>
-
-								<a href="sobre.html" class="button cut-corner">Leia mais</a>
-							</div>
-						</li>
-						<li class="lazy-bg" data-background="principal/dummy/slide-2.jpg">
-							<div class="container">
+			<main>
+				<div class="hero">
+					<div class="slider">
+						<ul class="slides">
+							<li class="lazy-bg" data-background="principal/dummy/slide-1.jpg">
+								<div class="container">
 									<h2 class="slide-title">Cifras Collection</h2>
 									<h3 class="slide-subtitle">O seu repositório de cifras online</h3>
 									<p class="slide-desc">Armazene suas cifras e acesse de qualquer lugar de forma rápida e fácil...</p>
-
+	
 									<a href="sobre.html" class="button cut-corner">Leia mais</a>
-							</div>
-						</li>
-						<li class="lazy-bg" data-background="principal/dummy/slide-3.jpg">
-							<div class="container">
-									<h2 class="slide-title">Cifras Collection</h2>
-									<h3 class="slide-subtitle">O seu repositório de cifras online</h3>
-									<p class="slide-desc">Armazene suas cifras e acesse de qualquer lugar de forma rápida e fácil...</p>
-
-									<a href="sobre.html" class="button cut-corner">Leia mais</a>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-			
-			<main class="main-content">
-				<div class="fullwidth-block testimonial-section">
-					<div class="container">
-						<div class="quote-slider">
-							<ul class="slides">
-								<li>
-									<blockquote>
-										<p>"Site criado para auxiliar o armazenamento do aplicativo cifras collection, facilitando o download e upload de cifras e partituras para as contas pessoais dos usuários."</p>
-										<cite>Fillipe R. Bernardes</cite>
-										<span>Criador e desenvolvedor do cifras collection</span>
-									</blockquote>
-								</li>
-							</ul>
-						</div>
+								</div>
+							</li>
+							<li class="lazy-bg" data-background="principal/dummy/slide-2.jpg">
+								<div class="container">
+										<h2 class="slide-title">Cifras Collection</h2>
+										<h3 class="slide-subtitle">O seu repositório de cifras online</h3>
+										<p class="slide-desc">Site criado para auxiliar o armazenamento do aplicativo cifras collection, facilitando o download e upload de cifras e partituras para as contas pessoais dos usuários.</p>
+	
+										<a href="sobre.html" class="button cut-corner">Leia mais</a>
+								</div>
+							</li>
+							<li class="lazy-bg" data-background="principal/dummy/slide-3.jpg">
+								<div class="container">
+										<h2 class="slide-title">Cifras Collection</h2>
+										<h3 class="slide-subtitle">O seu repositório de cifras online</h3>
+										<p class="slide-desc">Utilize o aplicativo mobile para visualizar suas cifras...</p>
+	
+										<a href="sobre.html" class="button cut-corner">Leia mais</a>
+								</div>
+							</li>
+						</ul>
 					</div>
-				</div> 
-			</main> 
-
+				</div>
+			
+			</main>
 			<footer class="site-footer">
 				<div class="container">
-					<img src="principal/dummy/logo-footer.png" alt="Site Name"></img>
+					<img src="principal/dummy/logo.png" alt="Site Name" width="200" height="80"></img>
 					
 					<address>
-						<p><a href="tel:354543543">(24) 999413515</a> <br /> <a href="mailto:frbfla@gmail.com">frbfla@gmail.com</a></p> 
+						<p><a href="tel:24999413515">(24) 999413515</a> <br /> <a href="mailto:frbfla@gmail.com">frbfla@gmail.com</a></p> 
 					</address> 
 								
 					<div class="social-links">
