--- a/cifrasCollection/src/main/resources/templates/login.html
+++ b/cifrasCollection/src/main/resources/templates/login.html
@@ -1,23 +1,89 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" >
+
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Autenticação</title>
-	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-	</head>
-	<body>
-		<div class="container" >
-		<form th:action="@{/login}" method="post">
-		  <input name="username" class="form-control" placeholder="Usuário"/>
-			
-		  <input type="password" name="password" class="form-control" placeholder="Senha"/>
-		 
-		  <button class="btn btn-primary btn-block">Entrar</button>
-		</form>
-		</div>
-	    
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	    <script src="bootstrap/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8"></meta>
+  <title>Sign-Up/Login Form</title>
+  <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'></link>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"></link>
+  <link rel="stylesheet" href="principal/css/styleTelaLogin.css"></link>
+
+  
+</head>
+
+<body>
+  <div class="form">
+      <ul class="tab-group">
+        <li class="tab active"><a href="#signup">Cadastrar</a></li>
+        <li class="tab"><a href="#login">Logar</a></li>
+      </ul>
+      
+      <div class="tab-content">
+        <div id="signup">   
+          <h1>Cadastro gratuito</h1>
+
+			<form action="/" method="post">
 	
-	</body>
+				<div class="top-row">
+					<div class="field-wrap">
+						<label> Primeiro Nome<span class="req">*</span>
+						</label> <input type="text" required="required" autocomplete="off" />
+					</div>
+	
+					<div class="field-wrap">
+						<label> Último Nome<span class="req">*</span>
+						</label> <input type="text" required="required" autocomplete="off" />
+					</div>
+				</div>
+	
+				<div class="field-wrap">
+					<label> Email<span class="req">*</span>
+					</label> <input type="email" required="required" autocomplete="off" />
+				</div>
+	
+				<div class="field-wrap">
+					<label> Senha<span class="req">*</span>
+					</label> <input type="password" required="required" autocomplete="off" />
+				</div>
+				
+				<button type="submit" class="button button-block">Enviar</button>
+				
+			</form>
+
+			</div>
+        
+        <div id="login">   
+          <h1>Bem-vindo!</h1>
+
+			<form action="/" method="post">
+
+				<div class="field-wrap">
+					<label> Email<span class="req">*</span>
+					</label> <input type="email" required="required" autocomplete="off" />
+				</div>
+
+				<div class="field-wrap">
+					<label> Senha<span class="req">*</span>
+					</label> <input type="password" required="required" autocomplete="off" />
+				</div>
+
+				<p class="forgot">
+					<a href="#">Esqueceu a senha?</a>
+				</p>
+
+				<button class="button button-block">Entrar</button>
+
+			</form>
+
+		</div>
+        
+      </div><!-- tab-content -->
+      
+	</div> <!-- /form -->
+  	
+  	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script  src="principal/js/index.js"></script>
+
+</body>
+
 </html>
