--- a/cifrasCollection/src/main/resources/templates/login.html
+++ b/cifrasCollection/src/main/resources/templates/login.html
@@ -1,89 +1,114 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8"></meta>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1"></meta>
+		
+		<title>Cifras Collection</title>
+		<!-- Loading third party fonts -->
+		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet" type="text/css"></link>
+		<link href="principal/fonts/font-awesome.min.css" rel="stylesheet" type="text/css"></link>
+		<!-- Loading main css file -->
+		<link rel="stylesheet" href="principal/style.css"></link>
+		
+		<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'></link>
+  		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"></link>
+  		<link rel="stylesheet" href="principal/css/styleTelaLogin.css"></link>
+		
+		<!--[if lt IE 9]>
+		<script src="js/ie-support/html5.js"></script>
+		<script src="js/ie-support/respond.js"></script>
+		<![endif]-->
 
-<head>
-  <meta charset="UTF-8"></meta>
-  <title>Sign-Up/Login Form</title>
-  <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'></link>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"></link>
-  <link rel="stylesheet" href="principal/css/styleTelaLogin.css"></link>
+	</head>
 
-  
-</head>
-
-<body>
-  <div class="form">
-      <ul class="tab-group">
-        <li class="tab active"><a href="#signup">Cadastrar</a></li>
-        <li class="tab"><a href="#login">Logar</a></li>
-      </ul>
-      
-      <div class="tab-content">
-        <div id="signup">   
-          <h1>Cadastro gratuito</h1>
-
-			<form action="/" method="post">
-	
-				<div class="top-row">
-					<div class="field-wrap">
-						<label> Primeiro Nome<span class="req">*</span>
-						</label> <input type="text" required="required" autocomplete="off" />
+	<body class="header-collapse">
+		
+		<div id="site-content">
+			<main>
+				<div class="form">
+					<ul class="tab-group">
+						<li class="tab active"><a href="#signup">Cadastrar</a></li>
+						<li class="tab"><a href="#login">Logar</a></li>
+					</ul>
+		
+					<div class="tab-content">
+						<div id="signup">
+							<h1>Cadastro gratuito</h1>
+							
+							<span th:text="${mensagemCadastro}"></span>
+							
+							<form action="cadastrar" method="post">
+		
+								<div class="top-row">
+									<div class="field-wrap">
+										<label> Primeiro Nome<span class="req">*</span>
+										</label> <input type="text" required="required" autocomplete="off" id="nome" name="nome"/>
+									</div>
+		
+									<div class="field-wrap">
+										<label> Último Nome<span class="req">*</span>
+										</label> <input type="text" required="required" autocomplete="off" id="sobrenome" name="sobrenome"/>
+									</div>
+								</div>
+		
+								<div class="field-wrap">
+									<label> Email<span class="req">*</span>
+									</label> <input type="email" required="required" autocomplete="off" id="email" name="email"/>
+								</div>
+		
+								<div class="field-wrap">
+									<label> Senha<span class="req">*</span>
+									</label> <input type="password" required="required" autocomplete="off" id="senha" name="senha"/>
+								</div>
+		
+								<button type="submit" class="button button-block">Enviar</button>
+		
+							</form>
+		
+						</div>
+		
+						<div id="login">
+							<h1>Bem-vindo!</h1>
+		
+							<form action="logar" method="post">
+		
+								<div class="field-wrap">
+									<label> Email<span class="req">*</span>
+									</label> <input type="email" required="required" autocomplete="off" id="login" name="login"/>
+								</div>
+		
+								<div class="field-wrap">
+									<label> Senha<span class="req">*</span>
+									</label> <input type="password" required="required" autocomplete="off" id="senha" name="senha"/>
+								</div>
+		
+								<p class="forgot">
+									<a href="#">Esqueceu a senha?</a>
+								</p>
+		
+								<span th:text="${mensagemLogin}"></span>
+								<button class="button button-block">Entrar</button>
+								
+		
+							</form>
+		
+						</div>
+		
 					</div>
-	
-					<div class="field-wrap">
-						<label> Último Nome<span class="req">*</span>
-						</label> <input type="text" required="required" autocomplete="off" />
-					</div>
+		
 				</div>
 	
-				<div class="field-wrap">
-					<label> Email<span class="req">*</span>
-					</label> <input type="email" required="required" autocomplete="off" />
-				</div>
-	
-				<div class="field-wrap">
-					<label> Senha<span class="req">*</span>
-					</label> <input type="password" required="required" autocomplete="off" />
-				</div>
-				
-				<button type="submit" class="button button-block">Enviar</button>
-				
-			</form>
+			</main>
+		
+		</div> <!-- #site-content -->
 
-			</div>
-        
-        <div id="login">   
-          <h1>Bem-vindo!</h1>
-
-			<form action="/" method="post">
-
-				<div class="field-wrap">
-					<label> Email<span class="req">*</span>
-					</label> <input type="email" required="required" autocomplete="off" />
-				</div>
-
-				<div class="field-wrap">
-					<label> Senha<span class="req">*</span>
-					</label> <input type="password" required="required" autocomplete="off" />
-				</div>
-
-				<p class="forgot">
-					<a href="#">Esqueceu a senha?</a>
-				</p>
-
-				<button class="button button-block">Entrar</button>
-
-			</form>
-
-		</div>
-        
-      </div><!-- tab-content -->
-      
-	</div> <!-- /form -->
-  	
-  	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script  src="principal/js/index.js"></script>
-
-</body>
+		<script src="principal/js/jquery-1.11.1.min.js"></script>		
+		<script src="principal/js/plugins.js"></script>
+		<script src="principal/js/app.js"></script>
+		<script  src="principal/js/index.js"></script>
+		
+	</body>
 
 </html>
