--- a/cifrasCollection/src/main/resources/templates/cadastrarcifras.html
+++ b/cifrasCollection/src/main/resources/templates/cadastrarcifras.html
@@ -5,13 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1"></meta>
 		
-		<title>Cifras Collection</title>
+		<title>About Us| Band Template</title>
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet" type="text/css"></link>
 		<link href="principal/fonts/font-awesome.min.css" rel="stylesheet" type="text/css"></link>
 		<!-- Loading main css file -->
 		<link rel="stylesheet" href="principal/style.css"></link>
-	
+		<link rel="stylesheet" href="principal/css/styleTelaCadastro.css"></link>
 		
 		<!--[if lt IE 9]>
 		<script src="js/ie-support/html5.js"></script>
@@ -20,9 +20,9 @@
 
 	</head>
 
-	<body class="header-collapse">
+	<body>
 		
-		<div id="site-content">
+		<div id="site-content">			
 			<header class="site-header">
 				<div class="container">
 					<a href="/" id="branding">
@@ -37,7 +37,7 @@
 							<li class="menu-item" th:if="${usuarioLogado eq null}"><a href="login.html">Login</a></li>
 							
 							<li class="menu-item" th:if="${usuarioLogado ne null}"><a href="pesquisar.html">Pesquisar</a></li>
-							<li class="menu-item" ><a href="cadastrarcifras.html">Cadastrar</a></li>
+							<li class="menu-item" th:if="${usuarioLogado ne null}"><a href="cadastrar.html">Cadastrar</a></li>
 							
 							<li class="menu-item"><a href="contato.html">Contato</a></li>
 							<li class="menu-item"><a href="sobre.html">Sobre</a></li>				
@@ -52,41 +52,51 @@
 			</header> <!-- .site-header -->
 			
 			<main>
-				<div class="hero">
-					<div class="slider">
-						<ul class="slides">
-							<li class="lazy-bg" data-background="principal/dummy/slide-1.jpg">
-								<div class="container">
-									<h2 class="slide-title">Cifras Collection</h2>
-									<h3 class="slide-subtitle">O seu repositório de cifras online</h3>
-									<p class="slide-desc">Armazene suas cifras e acesse de qualquer lugar de forma rápida e fácil...</p>
-	
-									<a href="sobre.html" class="button cut-corner">Leia mais</a>
-								</div>
-							</li>
-							<li class="lazy-bg" data-background="principal/dummy/slide-2.jpg">
-								<div class="container">
-										<h2 class="slide-title">Cifras Collection</h2>
-										<h3 class="slide-subtitle">O seu repositório de cifras online</h3>
-										<p class="slide-desc">Site criado para auxiliar o armazenamento do aplicativo cifras collection, facilitando o download e upload de cifras e partituras para as contas pessoais dos usuários.</p>
-	
-										<a href="sobre.html" class="button cut-corner">Leia mais</a>
-								</div>
-							</li>
-							<li class="lazy-bg" data-background="principal/dummy/slide-3.jpg">
-								<div class="container">
-										<h2 class="slide-title">Cifras Collection</h2>
-										<h3 class="slide-subtitle">O seu repositório de cifras online</h3>
-										<p class="slide-desc">Utilize o aplicativo mobile para visualizar suas cifras...</p>
-	
-										<a href="sobre.html" class="button cut-corner">Leia mais</a>
-								</div>
-							</li>
-						</ul>
-					</div>
+				<div class="container">
+					<fieldset>
+						<h2>Cadastro de Cifras</h2>
+						
+						<span th:text="${mensagemCadastro}"></span>
+						<form action="cadastrarCifra" method="post" enctype="multipart/form-data">
+							<div class="form-group">
+								<label for="nome" class="labels">Nome da música</label> 
+								<input type="text" class="form-control" id="nome" name="nome" required="required"/>
+							</div>
+							
+							<div class="form-group">
+								<label for="tom" class="labels">Tom da música</label> 
+							    <select class="form-control" id="tom" name="tom" required="required">
+							        <option th:each="tomM : ${tons}"
+							                th:value="${tomM.descricao}"
+							                th:text="${tomM.descricao}"
+							                th:selected="${tomM.equals(tom)}"/>
+							    </select>
+							</div>
+							
+							<div class="form-group">
+								<label for="cantor" class="labels">Compositor/Cantor da música</label> 
+								<input type="text" class="form-control" id="cantor" name="cantor" />
+							</div>
+							
+							<div class="form-group">
+								<label for="linkYouTube" class="labels">Link YouTube</label> 
+								<input type="text" class="form-control" id="linkYouTube" name="linkYouTube"/>
+							</div>
+							
+							<div class="form-group">
+								<label for="arquivo" class="labels">Arquivo</label> 
+								<input id="arquivo" name="arquivo" type="file" class="file" required="required"
+									data-show-upload="false" data-show-caption="true" 
+									data-msg-placeholder="Escolha o arquivo para upload (Formato PDF)..."></input>
+							</div>
+							
+							<button type="submit" class="btn btn-success">Salvar</button>
+						</form>	
+					</fieldset>
 				</div>
-			
 			</main>
+			
+			
 			<footer class="site-footer">
 				<div class="container">
 					<img src="principal/dummy/logo.png" alt="Site Name" width="200" height="80"></img>
@@ -104,9 +114,9 @@
 				</div>
 			</footer> <!-- .site-footer -->
 
-		</div> <!-- #site-content -->
+		</div> <!-- #site-content -->		
 
-		<script src="principal/js/jquery-1.11.1.min.js"></script>		
+		<script src="principal/js/jquery-1.11.1.min.js"></script>	
 		<script src="principal/js/plugins.js"></script>
 		<script src="principal/js/app.js"></script>
 		
