--- a/cifrasCollection/src/main/resources/static/principal/style.css
+++ b/cifrasCollection/src/main/resources/static/principal/style.css
@@ -2699,3 +2699,8 @@ div.usuarioLogado {
 	color: white;
 	font-style: italic;
 }
+
+.leading-extra {
+	font-style: italic !important;
+	text-align: justify;
+}
