--- a/cifrasCollection/src/main/resources/static/principal/css/styleTelaLogin.css
+++ b/cifrasCollection/src/main/resources/static/principal/css/styleTelaLogin.css
@@ -26,7 +26,7 @@ a:hover {
 }
 
 .form {
-  background: rgba(19, 35, 47, 0.9);
+  background: black;
   padding: 40px;
   max-width: 400px;
   margin: 40px auto;
