--- a/cifrasCollection/src/main/resources/templates/sobre.html
+++ b/cifrasCollection/src/main/resources/templates/sobre.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
+		<meta charset="UTF-8"></meta>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1"></meta>
 		
 		<title>About Us| Band Template</title>
 		<!-- Loading third party fonts -->
-		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet" type="text/css">
-		<link href="principal/fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet" type="text/css"></link>
+		<link href="principal/fonts/font-awesome.min.css" rel="stylesheet" type="text/css"></link>
 		<!-- Loading main css file -->
-		<link rel="stylesheet" href="principal/style.css">
+		<link rel="stylesheet" href="principal/style.css"></link>
+		<link rel="stylesheet" href="principal/css/styleTelaSobre.css"></link>
+		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 		
 		<!--[if lt IE 9]>
 		<script src="js/ie-support/html5.js"></script>
@@ -23,128 +25,35 @@
 		
 		<div id="site-content">
 			<header class="site-header">
-				<div class="container">
-					<a href="index.html" id="branding">
-						<img src="principal/dummy/logo.png" alt="Site Title">
-						<small class="site-description">Slogan goes here</small>
-					</a> <!-- #branding -->
-					
-					<nav class="main-navigation">
-						<button type="button" class="toggle-menu"><i class="fa fa-bars"></i></button>
-						<ul class="menu">
-							<li class="menu-item"><a href="index.html">Home</a></li>
-							<li class="menu-item current-menu-item"><a href="about.html">About</a></li>
-							<li class="menu-item"><a href="gallery.html">Gallery</a></li>
-							<li class="menu-item"><a href="download.html">Download</a></li>
-							<li class="menu-item"><a href="blog.html">Blog</a></li>
-							<li class="menu-item"><a href="contact.html">Contact</a></li>
-						</ul> <!-- .menu -->
-					</nav> <!-- .main-navigation -->
-					<div class="mobile-menu"></div>
-				</div>
-			</header> <!-- .site-header -->
+				<div th:replace="/template/header :: header"></div>
+			</header>
 			
-			<main class="main-content">
-				<div class="fullwidth-block inner-content">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-7">
-								<div class="content">
-									<h2 class="entry-title">Our History</h2>
-									<figure class="featured-image">
-										<img src="dummy/post-image.jpg" alt="post image">
-									</figure>
-									<p class="leading">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat odio autem iste neque architecto alias culpa, ab libero, praesentium esse natus quae possimus sed qui dolorum laudantium illum, incidunt eligendi?</p>
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.</p>
-
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
-								</div>
+			<main>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="content">
+								<h2>Nossa história</h2>
+								<p class="leading leading-extra">O site Cifras Collection surgiu em 2018 com o intuito de facilitar com 
+								que o seu desenvolvedor pudesse armazenar suas cifras em um só local, podendo acessá-las 
+								de qualquer lugar e através de qualquer dispositivo com acesso a internet. Também foi uma forma de exercitar o
+								aprendizado do framework SpringBoot, já que o desenvolvedor estava se dedicando a esse Framework na época.</p>
+							
 							</div>
-							<div class="col-md-4 col-md-push-1">
-								<aside class="sidebar">
-									<div class="widget">
-										<h3 class="widget-title">Discography</h3>
-										<ul class="discography-list">
-											<li>
-												<figure class="cover"><img src="dummy/thumbnail-1.jpg" alt="thumbnail 1"></figure>
-												<div class="detail">
-													<h3><a href="#">Deserunt mollitia animi</a></h3>
-													<span class="year">2004</span>
-													<span class="track">17 tracks</span>
-												</div>
-											</li>
-											<li>
-												<figure class="cover"><img src="dummy/thumbnail-2.jpg" alt="thumbnail 2"></figure>
-												<div class="detail">
-													<h3><a href="#">Deserunt mollitia animi</a></h3>
-													<span class="year">2004</span>
-													<span class="track">17 tracks</span>
-												</div>
-											</li>
-											<li>
-												<figure class="cover"><img src="dummy/thumbnail-3.jpg" alt="thumbnail 3"></figure>
-												<div class="detail">
-													<h3><a href="#">Deserunt mollitia animi</a></h3>
-													<span class="year">2004</span>
-													<span class="track">17 tracks</span>
-												</div>
-											</li>
-											<li>
-												<figure class="cover"><img src="dummy/thumbnail-4.jpg" alt="thumbnail 4"></figure>
-												<div class="detail">
-													<h3><a href="#">Deserunt mollitia animi</a></h3>
-													<span class="year">2004</span>
-													<span class="track">17 tracks</span>
-												</div>
-											</li>
-											<li>
-												<figure class="cover"><img src="dummy/thumbnail-5.jpg" alt="thumbnail 5"></figure>
-												<div class="detail">
-													<h3><a href="#">Deserunt mollitia animi</a></h3>
-													<span class="year">2004</span>
-													<span class="track">17 tracks</span>
-												</div>
-											</li>
-										</ul>
-									</div>
-								</aside>
-							</div>
-						</div>
+						</div>						
 					</div>
-				</div> <!-- .testimonial-section -->
-
-				
+				</div> 
 			</main> <!-- .main-content -->
 
-			<footer class="site-footer">
-				<div class="container">
-					<img src="dummy/logo-footer.png" alt="Site Name">
-					
-					<address>
-						<p>495 Brainard St. Detroit, MI 48201 <br><a href="tel:354543543">(563) 429 234 890</a> <br> <a href="mailto:info@bandname.com">info@bandname.com</a></p> 
-					</address> 
-					
-					<form action="#" class="newsletter-form">
-						<input type="email" placeholder="Enter your email to join newsletter...">
-						<input type="submit" class="button cut-corner" value="Subscribe">
-					</form> <!-- .newsletter-form -->
-					
-					<div class="social-links">
-						<a href="#"><i class="fa fa-facebook-square"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-google-plus"></i></a>
-						<a href="#"><i class="fa fa-pinterest"></i></a>
-					</div> <!-- .social-links -->
-					
-					<p class="copy">Copyright 2014 Company Name. Designed by Themezy. All right reserved</p>
-				</div>
+			<footer class="site-footer site-footer-extra">
+				<div th:replace="/template/footer :: footer"></div>
 			</footer> <!-- .site-footer -->
 
 		</div> <!-- #site-content -->
 
-		<script src="js/jquery-1.11.1.min.js"></script>		
-		<script src="js/plugins.js"></script>
-		<script src="js/app.js"></script>
+		<script src="principal/js/jquery-1.11.1.min.js"></script>		
+		<script src="principal/js/plugins.js"></script>
+		<script src="principal/js/app.js"></script>
 		
 	</body>
 
